--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -201,7 +201,7 @@ func main(req: RequestValue, res: RequestResponse) -> RequestResponse {
 
 <p>To find more details about a build that has failed you can get the <code>buildId</code> from the deployment and use the <a href="/docs/api#get-build">Get Build</a> endpoint to get more information about the build.</p>
 
-<p>Deployments that have succeeded in building will be marked as "ready" and can be activated and used.</p>
+<p>Deployments that have been built successfully are marked as "ready" and can be activated and used.</p>
 
 <div class="notice">
     <h3>Note: </h3>
