feat: add getting started section to the docs

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -11,6 +11,10 @@ $runtimes = $this->getParam('runtimes', []);
 
 <p>Appwrite Functions run in a secure, isolated Docker container. By default, Appwrite supports multiple runtimes for different languages that you can use to run your code.</p>
 
+<h2><a href="/docs/functions#gettingStarted" id="gettingStarted">Getting Started</a></h2>
+
+<p>Getting started with the Appwrite </p>
+
 <h2><a href="/docs/functions#addFunction" id="addFunction">Add Your Function</a></h2>
 
 <p>You can add a new function from your Appwrite project's dashboard. Access your Functions settings from your project's left navigation panel. Click the 'Add Function' button and choose your function name and code runtime. In your Functions settings page, you can set your function event triggers, CRON schedule, and set secure environment variables for your function runtime.</p>
