--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -13,16 +13,16 @@ $runtimes = $this->getParam('runtimes', []);
 
 <h2><a href="/docs/functions#gettingStarted" id="gettingStarted">Getting Started</a></h2>
 
-<p>The quickest way to get started with Appwrite Functions is using the Appwrite CLI. The CLI comes with starter functions and a some simple commands to quickly create and deploy your functions. Once you have the CLI installed and setup with an Appwrite project, create your first function using: </p>
+<p>The quickest way to get started with Appwrite Functions is using the <a href="/docs/command-line">Appwrite CLI</a>. The CLI comes with starter code and a some simple commands to quickly create and deploy your functions. Once you have the CLI installed and setup with an Appwrite project, create your first function using: </p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite init function
-        ? What would you like to name your function? Awesome Function
-        ? What runtime would you like to use? Node.js (node-16.0)
-        ✓ Success</code></pre>
+? What would you like to name your function? Awesome Function
+? What runtime would you like to use? Node.js (node-16.0)
+✓ Success</code></pre>
 </div>
 
-<p> This will create a new node-js starter function in the current directory and also add it to your appwrite.json file. Go ahead and deploy your function using :</p>
+<p>Give your function a name and choose your runtime. This will create a new starter function in the current directory and also add it to your <b>appwrite.json</b> file. Go ahead and deploy your function using :</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy function
@@ -31,82 +31,11 @@ $runtimes = $this->getParam('runtimes', []);
 ✓ Success Deployed Awesome Function ( 621229798628cf5bf712 )</code></pre>
 </div>
 
+<p>You can now head over to your Appwrite Dashboard, navigate to the Function settings and execute your function. You can find the status of your execution under the <b>Logs</b> tab. Feel free to modify and play around with the starter code and use the <b>appwrite deploy</b> command to instantly deploy your changes to the Appwrite server. The following sections will dive deeper into some more terminology and advanced concepts which can be useful when writing your function from scratch.</p>
 
-<h2><a href="/docs/functions#addFunction" id="addFunction">Add Your Function</a></h2>
+<h2><a href="/docs/functions#writingYourOwnFunction" id="writingYourOwnFunction">Writing your own Function</a></h2>
 
-<p>You can add a new function from your Appwrite project's dashboard. Access your Functions settings from your project's left navigation panel. Click the 'Add Function' button and choose your function name and code runtime. In your Functions settings page, you can set your function event triggers, CRON schedule, and set secure environment variables for your function runtime.</p>
-
-<h2><a href="/docs/functions#deployCode" id="deployCode">Deploy Your Code</a></h2>
-
-<p>You can deploy your code using the <a href="/docs/command-line">Appwrite CLI</a> tool, the Appwrite <a href="/docs/getting-started-for-server">Server API</a> or manually from the Appwrite console.</p>
-
-<h3><a href="/docs/functions#createDeployment" id="createDeployment">Create Deployment</a></h3>
-
-<ul class="phases clear" data-ui-phases>
-    <li>
-        <h3>Unix</h3>
-
-        <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite functions createDeployment \
-    --functionId=6012cc93d5a7b \
-    --entrypoint="index.js" \
-    --code="/myrepo/myfunction"</code></pre>
-        </div>
-    </li>
-    <li>
-        <h3>CMD</h3>
-
-        <div class="ide margin-bottom" data-lang="bash" data-lang-label="CMD">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite functions createDeployment ^
-    --functionId=6012cc93d5a7b ^
-    --entrypoint="index.js" ^
-    --code="/myrepo/myfunction"</code></pre>
-        </div>
-    </li>
-    <li>
-        <h3>PowerShell</h3>
-
-        <div class="ide margin-bottom" data-lang="bash" data-lang-label="PowerShell">
-            <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite functions createDeployment ,
-    --functionId=6012cc93d5a7b ,
-    --entrypoint="index.js" ,
-    --code="/myrepo/myfunction"</code></pre>
-        </div>
-    </li>
-</ul>
-
-<p>The command above accepts two parameters:</p>
-
-<table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom text-size-small">
-    <thead>
-    <tr>
-        <th style="width: 140px">Name</th>
-        <th>Description</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>functionId</td>
-        <td>The ID of the Function you created in the previous step. You can find your function ID on your function page in your project dashboard.</td>
-    </tr>
-    <tr>
-        <td>entrypoint</td>
-        <td>The file name of your custom code that is executed when the function is triggered.</td>
-    </tr>
-    <tr>
-        <td>code</td>
-        <td>Gzip file with your code package. When used with the Appwrite CLI, pass the path to your code directory, and the CLI will automatically package your code. <br /><br /><b>For increased security, The Appwrite CLI only has access to file paths within the current working directory. In other words, it doesn't support file paths that try to access the parent directories (../../mycode).</b></td>
-    </tr>
-    </tbody>
-</table>
-
-<p><a href="/docs/server/functions#functionsCreateDeployment" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> You can also create new code deployments using the Appwrite server API</a></p>
-
-<h3>Exporting your code functions correctly</h3>
-<p>When creating functions with Appwrite your code must export the function in certain ways depending on the language. This varies between languages so refer to the examples below.</p>
-<p>When your function is called you receive two parameters, `request` and `response`. The request contains all data that was sent to the function as well as other various environment variables. A schema of the request object can be found below and is the same for all runtimes.</p>
-<p>The response object has two functions, <code>send()</code> and <code>json()</code> that can be used to send data back to the client. The types and implementation of these functions vary depending on runtime due to all languages being slightly different. You can check out implementation in the specific languages to learn more about them.</p>
-<p>An example of this for each language can be found below:</p>
+<p>When writing your own Appwrite Function, you must export the code in certain ways depending on the language. This varies between languages so refer to the examples below.</p>
 
 <ul class="phases clear" data-ui-phases>
     <li>
@@ -214,6 +143,82 @@ func main(req: RequestValue, res: RequestResponse) -> RequestResponse {
     </li>
 </ul>
 
+
+<p>When your function is called, you receive two parameters, a <b>request</b> and a <b>response</b> object. The request contains all data that was sent to the function including environment variables. A schema of the request object can be found below and is the same for all runtimes.</p>
+
+
+<p>The response object has two functions, <code>send()</code> and <code>json()</code> that can be used to send data back to the client. The types and implementation of these functions vary depending on runtime due to all languages being slightly different. You can check out implementation in the specific languages to learn more about them.</p>
+
+
+<h2><a href="/docs/functions#addFunction" id="addFunction">Add Your Function</a></h2>
+
+<p>You can add a new function from your Appwrite project's dashboard. Access your Functions settings from your project's left navigation panel. Click the 'Add Function' button and choose your function name and code runtime. In your Functions settings page, you can set your function event triggers, CRON schedule, and set secure environment variables for your function runtime.</p>
+
+<h2><a href="/docs/functions#deployCode" id="deployCode">Deploy Your Code</a></h2>
+
+<p>You can deploy your code using the <a href="/docs/command-line">Appwrite CLI</a> tool, the Appwrite <a href="/docs/getting-started-for-server">Server API</a> or manually from the Appwrite console.</p>
+
+<h3><a href="/docs/functions#createDeployment" id="createDeployment">Create Deployment</a></h3>
+
+<ul class="phases clear" data-ui-phases>
+    <li>
+        <h3>Unix</h3>
+
+        <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite functions createDeployment \
+    --functionId=6012cc93d5a7b \
+    --entrypoint="index.js" \
+    --code="/myrepo/myfunction"</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>CMD</h3>
+
+        <div class="ide margin-bottom" data-lang="bash" data-lang-label="CMD">
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite functions createDeployment ^
+    --functionId=6012cc93d5a7b ^
+    --entrypoint="index.js" ^
+    --code="/myrepo/myfunction"</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>PowerShell</h3>
+
+        <div class="ide margin-bottom" data-lang="bash" data-lang-label="PowerShell">
+            <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite functions createDeployment ,
+    --functionId=6012cc93d5a7b ,
+    --entrypoint="index.js" ,
+    --code="/myrepo/myfunction"</code></pre>
+        </div>
+    </li>
+</ul>
+
+<p>The command above accepts two parameters:</p>
+
+<table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom text-size-small">
+    <thead>
+    <tr>
+        <th style="width: 140px">Name</th>
+        <th>Description</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>functionId</td>
+        <td>The ID of the Function you created in the previous step. You can find your function ID on your function page in your project dashboard.</td>
+    </tr>
+    <tr>
+        <td>entrypoint</td>
+        <td>The file name of your custom code that is executed when the function is triggered.</td>
+    </tr>
+    <tr>
+        <td>code</td>
+        <td>Gzip file with your code package. When used with the Appwrite CLI, pass the path to your code directory, and the CLI will automatically package your code. <br /><br /><b>For increased security, The Appwrite CLI only has access to file paths within the current working directory. In other words, it doesn't support file paths that try to access the parent directories (../../mycode).</b></td>
+    </tr>
+    </tbody>
+</table>
+
+<p><a href="/docs/server/functions#functionsCreateDeployment" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> You can also create new code deployments using the Appwrite server API</a></p>
 
 <h2><a href="/docs/functions#build" id="build">Builds</a></h2>
 <p>Deployments needs to be built before they can be activated. This is automatically done after creating a deployment and the time taken can vary depending on the runtime.</p>
