feat: add getting started section to the docs

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -44,7 +44,7 @@ $runtimes = $this->getParam('runtimes', []);
                 response.send('Hello World!');
 }</code></pre>
         </div>
-        <b>Installing Dependencies</b>
+        <h4>Installing Dependencies</h4>
         <p>Include a <b>package.json</b> along with your function, and Appwrite handles the rest! The best practice is to make sure <b>node_modules</b> folder is <b>not</b> part of your tarball.</p>
         </div>
     </li>
