--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -262,11 +262,7 @@ func main(request: RequestValue, response: RequestResponse) -> RequestResponse {
 
 <p>To find more details about a build that has failed you can get the <code>buildId</code> from the deployment and use the <a href="/docs/api#get-build">Get Build</a> endpoint to get more information about the build.</p>
 
-<p>Deployments that have been built successfully are marked as "ready" and can be activated and used.</p>
-
-<div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker run --rm -v $(pwd):/app -w /app --env GEM_HOME=./.appwrite appwrite/env-ruby-2.7:1.0.2 bundle install</code></pre>
-</div>
+<p>Deployments that have been built successfully are marked as <b>ready</b> and can be activated and executed.</p>
 
 <div class="notice">
     <h3>A note about build times</h3>
@@ -275,7 +271,7 @@ func main(request: RequestValue, response: RequestResponse) -> RequestResponse {
 
 <h3>Accessing your Local Appwrite Setup</h3>
     
-<p>If you're running Appwrite locally and trying to connect to your local Appwrite instance from a cloud function, you'll have to use your local IP address instead of localhost. This is because if you use localhost, the container that runs the cloud function will try to connect to itself rather than your 'appwrite' container.</p>
+<p>If you're running Appwrite locally and trying to connect to your local Appwrite instance from a cloud function, you'll have to use your local IP address in place of localhost. This is because, within the container localhost does not refer to the host machine rather the container itself. </p>
 
 <h2><a href="/docs/functions#execute" id="execute">Execute</a></h2>
 
