--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -187,6 +187,11 @@ func main(request: RequestValue, response: RequestResponse) -> RequestResponse {
     </tbody>
 </table>
 
+<div class="notice">
+    <h3>Accessing your Local Appwrite Setup</h3>
+    <p>If you're running Appwrite locally and trying to connect to your local Appwrite instance from a cloud function, you'll have to use your local IP address in place of localhost. This is because, within the container localhost does not refer to the host machine rather the container itself. </p>
+</div>
+
 <h2><a href="/docs/functions#createFunction" id="createFunction">Create your Function</a></h2>
 
 <p>Before you can deploy your function, you will need to create a new function from your Appwrite project's dashboard. Access the Function settings from your project's left navigation panel. Click the 'Add Function' button and choose a function name and runtime. In your Functions settings page, you can also set your function event triggers, CRON schedule, and set secure environment variables for your function. </p>
@@ -268,10 +273,6 @@ func main(request: RequestValue, response: RequestResponse) -> RequestResponse {
     <h3>A note about build times</h3>
     <p>Statically compiled runtimes such as Rust or Swift take much longer to build however yield better performance over their dynamically compiled counterparts such as Node.</p>
 </div>
-
-<h3>Accessing your Local Appwrite Setup</h3>
-    
-<p>If you're running Appwrite locally and trying to connect to your local Appwrite instance from a cloud function, you'll have to use your local IP address in place of localhost. This is because, within the container localhost does not refer to the host machine rather the container itself. </p>
 
 <h2><a href="/docs/functions#execute" id="execute">Execute</a></h2>
 
