--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -270,7 +270,7 @@ func main(request: RequestValue, response: RequestResponse) -> RequestResponse {
 <p>Deployments that have been built successfully are marked as <b>ready</b> and can be activated and executed.</p>
 
 <div class="notice">
-    <h3>A note about build times</h3>
+    <h3>Build Times</h3>
     <p>Statically compiled runtimes such as Rust or Swift take much longer to build however yield better performance over their dynamically compiled counterparts such as Node.</p>
 </div>
 
