--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -8,7 +8,7 @@
 
 <h3><a href="/docs/command-line#installWithNpm" id="installWithNpm">Install with npm</a></h3>
 
-<p>If you have npm set up, installing the CLI is as simple as running</p>
+<p>If you have npm set up, run the command below to install the CLI</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers">
