--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -44,7 +44,7 @@
     </li>
 </ul>
 
-<p>Once the installation is complete, you can verify the install using</p>
+<p>After the installation is complete, verify the install using</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite -v</code></pre>
