--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -58,7 +58,7 @@
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite login</code></pre>
 </div>
 
-<h3><a href="/docs/command-line#initialiseProject" id="initialiseProject">Initialising your project</a></h3>
+<h3><a href="/docs/command-line#initializeProject" id="initializeProject">Initializing your project</a></h3>
 
 <p>Once logged in, the CLI needs to be initialised before you can use it with your Appwrite project. You can do this with the `appwrite init project` command. </p>
 
