--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -107,7 +107,7 @@ appwrite init function
 
 <h3><a href="/docs/command-line#deployCollections" id="deployCollections">Deploying collections</a></h3>
 
-<p>The Appwrite CLI also makes it extremely easy to migrate your project from a development server to a production server using the CLI. You can deploy all the collections in your appwrite.json file using</p>
+<p>The Appwrite CLI helps you migrate your project from a development server to a production server using the CLI. You can deploy all the collections in your appwrite.json file using</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy collections</code></pre>
