--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -120,7 +120,7 @@ appwrite init function
 </div>
 
 <div class="notice margin-bottom"> 
-    <h3>Self Signed Certificates</h3> 
+    <h3>Self-Signed Certificates</h3> 
     <p>By default, requests to domains with self-signed SSL certificates (or no certificates) are disabled. If you trust the domain, you can bypass the certificate validation using</p>
     <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite client --selfSigned true</code></pre>
