--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -174,7 +174,7 @@ appwrite init function
 
 <p><b>Create Document</b></p>
 
-<p>To create a new document in an existing collection, you can use the `createDocument` command.</p>
+<p>To create a new document in an existing collection, use the `createDocument` command.</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite database createDocument --collectionId <ID> --documentId 'unique()' --data '{ "Name": "Iron Man" }' --read role:all team:abc</code></pre>
