--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -182,7 +182,7 @@ appwrite init function
 
 <h3><a href="/docs/command-line#configuration" id="configuration">Configuration</a></h3>
 
-<p>At any point, if you would like to change your server endpoint, project key or selfSigned certificate acceptance, you can use of the `client` service.</p>
+<p>At any point, if you would like to change your server endpoint, project key, or self-signed certificate acceptance, use the `client` service.</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>
