--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -60,7 +60,7 @@
 
 <h3><a href="/docs/command-line#initializeProject" id="initializeProject">Initializing your project</a></h3>
 
-<p>Once logged in, the CLI needs to be initialised before you can use it with your Appwrite project. You can do this with the `appwrite init project` command. </p>
+<p>After you're logged in, the CLI needs to be initialized before you can use it with your Appwrite project. Initialize it with the `appwrite init project` command. </p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite init project</code></pre>
