--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -66,7 +66,7 @@
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite init project</code></pre>
 </div>
 
-<p>The following prompt will guide you through the setup process. The init command also creates an appwrite.json file representing your Appwrite project. The `appwrite.json` file does a lot of things. </p>
+<p>The following prompts guide you through the setup process. The init command also creates an appwrite.json file representing your Appwrite project. The `appwrite.json` file does the following things. </p>
 
 <ul>
     <li>Provides context to the CLI</li>
