--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -89,7 +89,7 @@
 
 <h3><a href="/docs/command-line#deployFunctions" id="deployFunctions">Deploying cloud functions</a></h3>
 
-<p>The CLI makes it extremely easy to create and deploy Appwrite's cloud functions. Initialise your new function using</p>
+<p>The CLI also handles creating and deploying Appwrite's cloud functions. Initialize your new function using</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>
