--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -99,7 +99,7 @@ appwrite init function
 ✓ Success</code></pre>
 </div>
 
-<p>This will create a new function `My Awesome Function` in your current Appwrite project and also create a template function for you to get started. You can now deploy this function using </p>
+<p>This creates a new function `My Awesome Function` in your current Appwrite project and also creates a template function for you to get started. You can now deploy this function using </p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy function</code></pre>
